<resources>

    <string name="app_name">爱车帮</string>
    <string name="hello">Hello World, MessageActivity!</string>
    <string name="main_empty_list">There is no recent conversation, write new message
		to start one.</string>
    <string name="chat_title_name">聊天</string>
    <string name="back">返回</string>
    <string name="send">发送</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="setting_btn">设置</string>
    <string name="promt_server">Your ServerURL</string>
    <string name="title">天下车商</string>
    <string name="nearbysearch_vendors">正在搜索附近的商户&#8230;</string>
    <string name="nearbysearch_dirvers">正在搜索附近的车主&#8230;</string>
    <string name="status_getfavvendorlist">正在获取你关注的商户&#8230;</string>
    <string name="status_getvendorfellowlist">正在获取关注你的车主&#8230;</string>
    <string name="format_msg_location">一个位置信息</string>
    <string name="format_msg_picture">一个图片</string>
    <string name="format_msg_newfellow">我们已经成为好友，开始聊天吧</string>
    <string name="yesterday">昨天</string>
    <string name="left_arrow">\u2190</string>
    <string name="right_arrow">\u2192</string>
    <string name="up_arrow">\u2191</string>
    <string name="down_arrow">\u2193</string>
    <string name="stop_animation">\u25A0</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="animate">Animate</string>
    <string name="location_zh">位置</string>
    <string name="gallery_zh">相册</string>
    <string name="camera_zh">相机</string>
    <string name="alert_zh">提醒</string>
    <string name="positive_zh">确定</string>
    <string name="negative_zh">取消</string>
    <string name="clearmsg_confirmtxt">确认删除站内信么？</string>
    <string name="tip_textmsgfailed">消息发送失败，请确保网络连接正常并重试</string>
    <string name="tip_picmsgfailed">图片发送失败，请确保网络连接正常并重试</string>
    <string name="tip_locmsgfailed">位置发送失败，请确保网络连接正常并重试</string>
    <string name="tip_followsuccess">关注商户成功</string>
    <string name="tip_followfailed">关注商户失败，请检查网络连接并重试</string>
    <string name="tip_invitationsuccess">关注请求发送成功</string>
    <string name="tip_invitationfailed">关注请求发送失败，请确保网络连接正常并重试</string>
    <string name="project_zh">所做项目:</string>
    <string name="shopname_zh">商户名:</string>
    <string name="zh_repair">修理</string>
    <string name="zh_beauty">美容</string>
    <string name="zh_maintain">保养</string>
    <string name="zh_wash">洗车</string>
    <string name="zh_price">价格</string>
    <string name="zh_technology">技术</string>
    <string name="zh_efficiency">效率</string>
    <string name="zh_reception">接待</string>
    <string name="zh_environment">环境</string>
    <string name="zh_comment_hint">狠狠的表扬或者唾弃它吧</string>
    <string name="tip_commentsuccess">评论商户成功，请等待管理员审核</string>
    <string name="tip_commentfailed">评论商户失败，请检查网络连接并重试</string>
    <string name="nearbyvendorstatustext">正在获取该商户详细信息&#8230;</string>
    <string name="tip_myfellowvendorstatustext">正在获取该商户详细信息&#8230;</string>
    <string name="tip_nearbydriverstatustext">正在获取该车主详细信息&#8230;</string>
    <string name="tip_viewnearbyvendorfailed">获取商户详细信息失败，请检查网络连接并重试</string>
    <string name="tip_viewnearbydriverfailed">获取车主详细信息失败，请检查网络连接并重试</string>
    <string name="tip_nonextvendor">返回商户列表翻页刷新后可查询更多商户</string>
    <string name="tip_nonextdriver">这已经是最后一个附近车主了</string>
    <string name="tip_favvendorexist">你已经关注了该商户，无需重新关注</string>
    <string name="tip_vendorshaketext">我刚刚在『天下车商』上看到贵店的资料，非常希望和您建立联系，认识一下！ </string>
    <string name="tip_vendortextsent">站内信已发出，等待对方回复</string>
    <string name="tip_vendorcommenttooshort">评论内容不得少于10个字符</string>
    <string name="tip_retrievecomments">正在获取您的评论信息&#8230;</string>
    <string name="tip_nonearbydrivers">没有找到附近的车主，请稍后再试</string>
    <string name="tip_nonearbyvendors">没有找到附近的商户，请稍后再试</string>
    <string name="tip_nofavvendors">您还没有关注商户，请先关注</string>
    <string name="tip_novendorfellos">还没有车主关注您，请先邀请</string>
    <string name="tip_deletegroupmsgsuccess">站内信删除成功</string>
    <string name="tip_vendorfellowexits">该车主已经关注你了，无需重新发送邀请</string>
    <string name="tip_about1">  【爱车帮汽车服务商和车主即时通讯移动手机app应用软件】简称“爱车帮” 是天下车商网为车主提供的即时通讯工具，车主可以查询附近的汽车服务商信息，可以和商户进行一对一或者一对多的即时信息交流。</string>
    <string name="tip_about2">  天下车商网是上海孚嘉信息科技有限公司建设的汽车后市场平台网站。为车主提供多个城市的汽车服务和汽车服务商信息。同时为商户提供推广服务。</string>
    <string name="tip_getdriverinfofailed">获得车主信息失败</string>
    <string name="tip_advicetitle">  感谢你的意见和建议，这将极大的帮助我们改善服务。</string>
    <string name="tip_advicepromt">请输入您的反馈意见</string>
    <string name="zh_email">邮箱：</string>
    <string name="zh_phone">电话：</string>
    <string name="tip_ecctitle">  感谢您报告商户的错误信息，我们将回复邮件发送至您填写的邮箱中。</string>
    <string name="tip_eccpromt">请输入错误信息或修改意见</string>
    <string name="tip_phonenull">电话不能为空</string>
    <string name="tip_emailnull">邮箱不能为空</string>
    <string name="tip_contentnull">反馈内容不能为空</string>
    <string name="tip_emailinvalid">邮箱格式不正确</string>
    <string name="tip_advicesuccess">反馈意见发送成功</string>
    <string name="tip_advicefailed">反馈意见发送失败，请检查网络连接</string>
    <string name="tip_advicefailed2">反馈意见发送失败，错误信息为：%s</string>
    <string name="tip_eccsuccess">错误信息发送成功</string>
    <string name="tip_eccfailed">错误信息发送失败，请检查网络连接</string>
    <string name="tip_eccfailed2">错误信息发送失败，错误信息为：%s</string>
    <string name="tip_recentaudio">一段语音消息</string>
    <string name="tip_addtotop">置顶站内信</string>
    <string name="tip_canceltop">取消站内信置顶</string>
    <string name="tip_myvendors">我关注的商户</string>
    <string name="tip_mydrivers">关注我的车主</string>
    <string name="zh_clearmsg">清空站内信</string>
    <string name="zh_my">我的</string>
    <string name="zh_myinfo">我的信息</string>
    <string name="zh_mycomments">我的点评</string>
    <string name="zh_logout">登录/注销</string>
    <string name="zh_more">更多</string>
    <string name="zh_turnback">返回首页</string>
    <string name="zh_aboutus">关于我们</string>
    <string name="zh_moreapp">相关应用</string>
    <string name="zh_advice">意见反馈</string>
    <string name="tip_commentfailedformat">评论商户失败，错误信息：%s</string>
    <string name="tip_selectproject">请选择所做的汽车服务</string>
    <string name="zh_unknown">神秘人</string>
    <string name="tip_notificationformat_newmsg">%1$s 说：%2$s</string>
    <string name="tip_notificationformat_newfile">%s 发送了一个图片消息</string>
    <string name="tip_notificationformat_newlocation">%s 发送了一个位置信息</string>
    <string name="tip_notificationformat_newaudio">%s 发送了一个语音消息</string>
    <string name="tip_newmsg">一条新消息</string>
    <string name="tip_newfile">一个图片</string>
    <string name="tip_newlocation">一个位置信息</string>
    <string name="tip_newaudio">一段语音消息</string>
    <string name="tip_notificationformat_newinvverdict">%s 同意了你的关注请求</string>
    <string name="tip_notificationformat_newinv">%s 发送了一个关注请求</string>
    <string name="tip_newinv">一个关注请求</string>
    <string name="tip_audiomsgfailed">语音消息发送失败，请检查网络连接</string>
    <string name="tip_addtopsuccess">置顶站内信成功</string>
    <string name="tip_removetopsuccess">取消置顶站内信成功</string>
    <string name="tip_regfailedformat">注册失败，错误信息为：%s</string>
    <string name="tip_regfailed">注册失败, 请检查网络连接并重试</string>
    <string name="tip_loginfailed">登录失败，请检查网络连接并重试</string>
    <string name="tip_loginfailedformat_driver">登录失败，此为车主登录入口，请检查用户名和密码</string>
    <string name="tip_loginfailedformat_vendor">登录失败，此为商户登录入口，请检查用户名和密码</string>
    <string name="tip_getvendordetailfailed">获得商户详情失败，请检查网络连接</string>
    <string name="tip_getvendordetailinprogress">正在获得商户详细信息&#8230;</string>
    <string name="zh_kilometer">千米</string>
    <string name="tip_quitconfig">确定要退出爱车帮么？</string>
    <string name="tip_invverdictacceptsuccess">您已同意了该车商的关注邀请，可以给他发送站内信了</string>
    <string name="tip_invverdictsentfailed">消息发送失败，请检查网络连接并重试</string>
    <string name="tip_invverdictrejectsuccess">消息发送成功</string>
    <string name="tip_invprocesserro">该邀请已经处理过，无需再次处理</string>
    <string name="title_myfavvendor">我关注的商户</string>
    <string name="title_myvendorfellow">关注我的车主</string>
    <string name="tip_loadvendordetailfailed">加载该商户详细信息失败，请检查网络连接并重试</string>
    <string name="tip_viewselfvendorfailed">加载我的商户详细信息失败，请检查网络并重试</string>
    <string name="tip_status_selfvendorview">正在加载我的商户详细信息&#8230;</string>
    <string name="tip_nocomments">暂无评论</string>
    <string name="zh_none">无</string>
    <string name="zh_notlogin">暂不登陆</string>
    <string name="zh_brithdayformat">生日:%s</string>
    <string name="zh_addr">地址:%1$s-%2$s</string>
    <string name="zh_sex">性别:%s</string>
    <string name="zh_second">秒</string>
    <string name="zh_minute">分钟</string>
    <string name="zh_hour">小时</string>
    <string name="tip_followvendoryet">您已关注该商户，可以在“设置-我关注的商户”里直接和他对话</string>
    <string name="tip_followdriveryet">该车主已关注您，可以在“设置-关注我的车主”里直接和他对话</string>
    <string name="zh_myvendorinfo">我的商户信息</string>
    <string name="zh_drivercomments">车主的点评</string>
    <string name="zh_mydriverinfo">我的信息</string>
    <string name="zh_mycomments">我的点评</string>
    <string name="tip_vendordetailstatus">正在加载优惠券详情&#8230;</string>
    <string name="tip_vendordetailloadfailed">加载优惠券详情失败，请检查网络连接并重试</string>
    <string name="tip_nocoupondetail">该优惠券没有详情</string>
    <string name="tip_uploadcommentimgfailed">上传评论图片失败，请检查网络连接并重试</string>
    <string name="tip_locationfailed">尚未获得定位信息，请稍后或检查设置</string>
    <string name="tip_downloadversionformat">爱车帮有新版本(%s),是否下载更新</string>
    <string name="tip_upgradeformat">爱车帮新版本()%s),已经下载完成，是否安装</string>
    <string name="zh_install">安装</string>
    <string name="zh_download">下载</string>
    <string name="zh_nexttime">下次再说</string>
    <string name="zh_upgrade">软件更新</string>
    <string name="zh_downnewversion">下载新版本爱车帮</string>
    <string name="zh_downloading">正在下载(%s)</string>
    <string name="tip_getversioninfofailed">查询版本信息失败，请检查网络连接并重试</string>
    <string name="tip_curalreadylatest">当前版本为最新版，无需更新</string>
    <string name="tip_ischecking">正在检查更新，请耐心等待</string>
    <string name="tip_imgloading">正在加载图片&#8230;</string>
    <string name="tip_logout">您已退出了"%s"的账号</string>

</resources>