<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context="com.vehicle.app.activities.BeginActivity" >

    <LinearLayout
        android:id="@+id/activity_advice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/advice_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_bakground" >

            <Button
                android:id="@+id/advice_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:background="@drawable/selector_btn_gobak" />

            <TextView
                android:id="@+id/advice_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="意见反馈"
                android:textColor="@color/white"
                android:textSize="22sp" >
            </TextView>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:gravity="left"
            android:text="@string/tip_advicetitle"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/advice_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            android:hint="@string/tip_advicepromt"
            android:minLines="4"
            android:singleLine="false" />

        <EditText
            android:id="@+id/advice_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:hint="@string/zh_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/advice_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/zh_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/advice_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_btn_uploadimg" >
        </Button>
    </LinearLayout>

</merge>