<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vehicle.app.activities.SettingHomeActivity" >

    <LinearLayout
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/settings_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/nearbysearch_vendors"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/azure" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/settings_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/settings_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:contentDescription="@string/title"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_title_setting" >
            </ImageView>
        </LinearLayout>

        <com.vehicle.app.layout.BottomBarLayout
            android:id="@+id/settings_bottombar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" >
        </com.vehicle.app.layout.BottomBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/settings_bottombar"
            android:layout_below="@id/settings_title"
            android:background="@color/white" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/settings_base"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:contentDescription="@string/title"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_setting_my" >
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:gravity="bottom"
                        android:text="@string/zh_my"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <TableLayout
                    android:id="@+id/settingtable_my"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dip"
                    android:stretchColumns="1" >

                    <TableRow
                        android:id="@+id/settinghome_myrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/zh_myinfo"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/settings_myinfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:contentDescription="@string/title"
                            android:paddingRight="16dp"
                            android:src="@drawable/selector_btn_ok" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/gray" >
                    </View>

                    <TableRow
                        android:id="@+id/settinghome_mycommrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/zh_mycomments"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/settings_mycomments"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:contentDescription="@string/title"
                            android:paddingRight="16dp"
                            android:src="@drawable/selector_btn_ok" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/gray" >
                    </View>

                    <TableRow
                        android:id="@+id/settinghome_myfellowrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp" >

                        <TextView
                            android:id="@+id/settings_fellowtip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/settings_myfellows"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:contentDescription="@string/title"
                            android:paddingRight="16dp"
                            android:src="@drawable/selector_btn_ok" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/gray" >
                    </View>

                    <TableRow
                        android:id="@+id/settinghome_logoutrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/zh_logout"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/settings_logout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:contentDescription="@string/title"
                            android:paddingRight="16dp"
                            android:src="@drawable/selector_btn_ok" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/gray" >
                    </View>
                </TableLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:contentDescription="@string/title"
                        android:scaleType="centerCrop"
                        android:src="@drawable/icon_setting_more" >
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:gravity="bottom"
                        android:text="@string/zh_more"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <TableLayout
                    android:id="@+id/settingtable_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dip"
                    android:stretchColumns="1" >

                    <TableRow
                        android:id="@+id/settinghome_turnbackrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/zh_turnback"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/settings_returnfirst"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:contentDescription="@string/title"
                            android:paddingRight="16dp"
                            android:src="@drawable/selector_btn_ok" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/gray" >
                    </View>

                    <TableRow
                        android:id="@+id/settinghome_aboutusrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/zh_aboutus"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/settings_about"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:contentDescription="@string/title"
                            android:paddingRight="16dp"
                            android:src="@drawable/selector_btn_ok" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/gray" >
                    </View>

                    <TableRow
                        android:id="@+id/settinghome_moreapprow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/zh_moreapp"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/settings_moreapp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:contentDescription="@string/title"
                            android:paddingRight="16dp"
                            android:src="@drawable/selector_btn_ok" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/gray" >
                    </View>

                    <TableRow
                        android:id="@+id/settinghome_advicerow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/zh_advice"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/settings_advice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:contentDescription="@string/title"
                            android:paddingRight="16dp"
                            android:src="@drawable/selector_btn_ok" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/gray" >
                    </View>
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</merge>